changed rss logo to sqa

--- a/topic-description.tex
+++ b/topic-description.tex
@@ -25,7 +25,7 @@
 
 \title{
 %\vspace*{-2cm} \includegraphics[width=16cm]{header.png}
-\includegraphics[width=6cm]{figures/stuttgart-vector.pdf}\hfill{\includegraphics[width=3cm]{figures/rss_logo.pdf}}
+\includegraphics[width=6cm]{figures/stuttgart-vector.pdf}\hfill{\includegraphics[width=3cm]{figures/sqa_logo.png}}
 \quad \\ [0.5cm]
 {\large \textit{Master's Thesis (Master Softwaretechnik):}} \\ [1mm]
 {\Large Thesis Title}
