Updates to topic description

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,27 +1,20 @@
-% Encoding: UTF-8
-
-@Book{newman2015building,
-  title     = {Building Microservices},
-  publisher = {O'Reilly Media, Inc.},
-  year      = {2015},
-  author    = {Newman, Sam},
-  timestamp = {2015.11.13},
+@inproceedings{CaseStudyDatev,
+	author = {Kesim, Dominik and Wagner, Lion and von Kistowski, J{\'{o}}akim and Frank, Sebastian and {Van Hoorn}, Andr{\'{e}} and Hakamian, Alireza},
+	title = {{Scenario-based Resilience Evaluation and Improvement of Microservice Architectures: An Experience Report}},
+	year = {2020}
 }
-
-@InProceedings{pitakrat2016archaware,
-  author    = {Teerat Pitakrat and Du\v{s}an Okanovi\'{c} and Andre van Hoorn and Lars Grunske},
-  title     = {An Architecture-aware Approach to Hierarchical Online Failure Prediction},
-  booktitle = {Proceedings of the 12th International ACM SIGSOFT Conference on the Quality of Software Architectures (QoSA '16)},
-  year      = {2016},
-  publisher = {IEEE},
-  note      = {To appear},
+@inproceedings{SimuLizar1,
+author = {Becker, Matthias AND Becker, Steffen AND Meyer, Joachim},
+title = {SimuLizar: Design-Time Modeling and Performance Analysis of Self-Adaptive Systems},
+booktitle = {Software Engineering 2013},
+year = {2013},
+editor = {Kowalewski, Stefan AND Rumpe, Bernhard} ,
+pages = { 71-84 },
+publisher = {Gesellschaft für Informatik e.V.},
+address = {Bonn}
 }
-
-@Book{bass2015devops,
-  title     = {DevOps: A Software Architect's Perspective},
-  publisher = {Addison-Wesley Professional},
-  year      = {2015},
-  author    = {Bass, Len and Weber, Ingo and Zhu, Liming},
+@unpublished{MiSim,
+	author = {Beck, Samuel and Zorn, Christoph and G{\"{u}}nth{\"{o}}r, Johannes},
+	title = {{Simulation-based resilience prediction of microservice architectures}},
+	year = {2017}
 }
-
-@Comment{jabref-meta: databaseType:bibtex;}
